--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
-#  main:
-#    web-application-type: none
+  #  main:
+  #    web-application-type: none
   application:
     name: careermate
   datasource:
@@ -69,4 +69,9 @@ logging:
         client:
           RestTemplate: DEBUG
         http:
-            client: DEBUG
+          client: DEBUG
+google:
+    api-key: ${GOOGLE_API_KEY:default}
+weaviate:
+  url: ${WEAVIATE_URL:default}
+  api-key: ${WEAVIATE_API_KEY:default}
