--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   application:
     name: careermate
   datasource:
-    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:MyPostgresDB}
-    #    url: jdbc:postgresql://${NEON_URL}
+#    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:MyPostgresDB}
+    url: jdbc:postgresql://${NEON_URL}
     username: ${DB_USER_LOCAL:root}
     password: ${DB_PASSWORD_LOCAL:123456}
     driver-class-name: org.postgresql.Driver
