--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,12 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.diffblue.cover</groupId>
+            <artifactId>cover-annotations</artifactId>
+            <version>1.7.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
@@ -214,7 +220,18 @@
 					</excludes>
 				</configuration>
 			</plugin>
-		</plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <argLine>
+                        -javaagent:${settings.localRepository}/org/mockito/mockito-inline/5.7.0/mockito-inline-5.7.0.jar
+                    </argLine>
+                </configuration>
+            </plugin>
+
+        </plugins>
 	</build>
 
 </project>
