--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,14 +9,17 @@ spring:
   application:
     name: careermate
   datasource:
-#    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:MyPostgresDB}
-    url: jdbc:postgresql://${NEON_URL}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5439}/${DB_NAME:MyPostgresDB}
+#    url: jdbc:postgresql://${NEON_URL}
     username: ${DB_USER_LOCAL:root}
     password: ${DB_PASSWORD_LOCAL:123456}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
   security:
     oauth2:
       client:
@@ -34,8 +37,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${EMAIL_NAME}
-    password: ${EMAIL_PASSWORD}
+    username: ${EMAIL_NAME:default}
+    password: ${EMAIL_PASSWORD:default}
     properties:
       mail:
         smtp:
@@ -113,5 +116,7 @@ weaviate:
   url: ${WEAVIATE_URL:default}
   api-key: ${WEAVIATE_API_KEY:default}
   vectorizer: text2vec-weaviate
+huggingface:
+  api-key: ${HUGGINGFACE_API_KEY:default}
   # Model is NOT specified - Weaviate will use its default model (all-MiniLM-L6-v2)
   # through the Weaviate Embeddings Inference API
