refactor(recruiter-pacakge): fix recruiter

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -83,6 +83,7 @@ vnpay:
   pay-url: "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
   api-url: "https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"
   return-url: "http://localhost:8080/api/payment/return"
+  recruiter-return-url: "http://localhost:8080/api/recruiter-payment/return"
 
 # Firebase config
 firebase:
