--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: {PORT:8080}
   address: 0.0.0.0
-  forward-headers-strategy: native
+  forward-headers-strategy: framework
 spring:
   #  main:
   #    web-application-type: none
