fix: use configurable frontend URL for OAuth redirect

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,10 @@ server:
   address: 0.0.0.0
   forward-headers-strategy: framework
 
+# Frontend URL for OAuth redirect
+frontend:
+  url: ${FRONTEND_URL:http://localhost:3000}
+
 # Actuator health endpoint for Railway healthcheck
 management:
   endpoints:
