feat: Enhance interview management and notifications
- Added new error codes for interview cancellation, completion, and no-show scenarios in ErrorCode.java.
- Updated SecurityConfig.java to improve CORS configuration and public endpoint access.
- Modified RegistrationService.java to send notifications to all active admins upon new recruiter registration.
- Enhanced InterviewScheduleRepo.java with queries to find active and historical interviews.
- Updated JobApplyImp.java to handle interview cancellations for rejected applications and notify candidates.
- Added fields for cancelled interview information in JobApplyResponse.java.
- Implemented logic in InterviewScheduleServiceImpl.java to manage interview states and notify candidates on cancellations.
- Enhanced JobApplyMapper.java to include interview history in job application responses.
- Updated NotificationSseController.java to streamline SSE connections with JWT authentication.
- Improved recruiter notifications for profile update requests in RecruiterImp.java.
- Adjusted application.yml for default OAuth2 client credentials and reduced logging noise for authentication errors.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,11 +45,12 @@ spring:
       client:
         registration:
           google:
-            client-id: ${GOOGLE_CLIENT_ID}
-            client-secret: ${GOOGLE_CLIENT_SECRET}
+            client-id: ${GOOGLE_CLIENT_ID:966248572523-1g1iv05bmvrgs70l8oi1kfargefeghti.apps.googleusercontent.com}
+            client-secret: ${GOOGLE_CLIENT_SECRET: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}
             redirect-uri: ${OAUTH2_REDIRECT_URI:{baseUrl}/login/oauth2/code/{registrationId}}
             scope:
               - profile
+              - email
               - email
 
 
@@ -144,8 +145,20 @@ logging:
       apache:
         http: WARN
         kafka: WARN
+        # Reduce Tomcat/Catalina authentication error noise (expected for expired tokens)
+        catalina: WARN
       springframework:
+        # Reduce Spring Security authentication error logging (expected for expired tokens)
+        security:
+          oauth2:
+            server:
+              resource:
+                web:
+                  authentication: WARN
         web:
+          servlet:
+            # Reduce DispatcherServlet auth error spam (expected for expired tokens)
+            DispatcherServlet: WARN
           client:
             RestTemplate: WARN
           http:
